<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/universe_background"
    android:padding="15dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/arrow_circle_left"
        android:contentDescription="@string/btnBack"
        android:backgroundTint="@android:color/transparent"
        android:scaleX="2.3"
        android:scaleY="2.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:contentDescription="@string/register_description"
            android:src="@drawable/two_astronaut"/>

        <TextView
            android:text="@string/register_text"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login"
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:hint="@string/user"
                android:autofillHints="username"
                android:inputType="textNoSuggestions"
                android:background="@drawable/edt_login"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#D3BFF7"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:background="@drawable/edt_login"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#D3BFF7"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:background="@drawable/edt_login"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#D3BFF7"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/edtSenhaConfirmacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/passwordVerification"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:background="@drawable/edt_login"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#D3BFF7"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginBottom="25dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btnRegisterConclude"
                android:text="@string/conclude"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_bold"
                app:backgroundTint="@null"
                android:background="@drawable/btn_login" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>